--- a/pallets/network/Cargo.toml
+++ b/pallets/network/Cargo.toml
@@ -35,6 +35,7 @@ pallet-collective = { version = "37.0.0", default-features = false, path = "../c
 pallet-treasury.workspace = true
 fp-account = { workspace = true, features = ["serde"] }
 pallet-evm.workspace = true
+bs58.workspace = true
 
 [dev-dependencies]
 sp-io = { default-features = true, workspace = true }
